<resources>
	<string name="app_name">RSS News</string>
	<string name="close">닫기</string>
	<string name="chosun">조선일보</string>
	<string name="donga">동아일보</string>
	<string name="font_size">글자 크기</string>
	<string name="font_12">아주 작게</string>
	<string name="font_16">작게</string>
	<string name="font_20">중간</string>
	<string name="font_24">크게</string>
	<string name="font_28">아주 크게</string>
	<string name="show_all">기사 전문 보기</string>
	<string name="save_data">데이터 절약</string>
	<string name="see_summary">기사 요약 보기</string>
	<string name="toast_intent_error">기사를 열 수 없습니다.</string>
</resources>
